--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,13 +10,34 @@ nav a {
 h1 {
     color:steelblue;
 }
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
-p{
-    padding: 10px;
+p {
+    padding: 0;
+}
+main {
+    max-width: 800px;
+}
+aside {
+    width: 20em;
+    margin: 1rem;
+    border: 1px solid rgba(70, 131, 180, 0.2);
+    padding: 1rem;
+    background-color: #eee;
+    color: #333333;
+    text-align: center;
+}
+aside img {
+    width: 200px;
+    height: auto;
+}
+footer {
+    margin-top: 1em;
+    border-top: 1px solid #000;
+    align-content: center;
 }
