--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 nav {
     background-color: steelblue;
     padding: 10px;
@@ -16,6 +21,7 @@ main img {
     border: 1px solid steelblue;
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    float:right;
 }
 p {
     padding: 0;
@@ -25,12 +31,13 @@ main {
 }
 aside {
     width: 20em;
-    margin: 1rem;
-    border: 1px solid rgba(70, 131, 180, 0.2);
-    padding: 1rem;
-    background-color: #eee;
-    color: #333333;
     text-align: center;
+    position: relative;
+}
+aside h2 {
+    position: absolute;
+    top: 25px;
+    left: 80px;
 }
 aside img {
     width: 200px;
@@ -40,4 +47,12 @@ footer {
     margin-top: 1em;
     border-top: 1px solid #000;
     align-content: center;
+}
+/* Class Selector */
+.box {
+    margin: 1rem;
+    border: 1px solid rgba(70, 131, 180, 0.2);
+    padding: 1rem;
+    background-color: #eee;
+    color: #333333;
 }
