--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,7 +48,7 @@ footer {
     border-top: 1px solid #000;
     align-content: center;
 }
-/* Class Selector */
+/* Class Selectors */
 .box {
     margin: 1rem;
     border: 1px solid rgba(70, 131, 180, 0.2);
