--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,18 +3,36 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
+
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 750;
 }
+
 h1 {
     color:steelblue;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    border-bottom: 0.05rem solid steelblue;
 }
+
 main img {
     width: 150px;
     height: auto;
@@ -23,36 +41,52 @@ main img {
     box-shadow: 0 0 30px gray;
     float:right;
 }
+
 p {
     padding: 0;
 }
+
 main {
-    max-width: 800px;
+    grid-column: 2 / 3;
+    margin: 1rem;
 }
+
 aside {
-    width: 20em;
-    text-align: center;
+    width: 20rem;
     position: relative;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
 }
+
 aside h2 {
     position: absolute;
-    top: 25px;
-    left: 80px;
+    top: 20px;
+    left: 90px;
 }
+
 aside img {
     width: 200px;
     height: auto;
 }
+
 footer {
-    margin-top: 1em;
-    border-top: 1px solid #000;
+    border-top: 1px solid steelblue;
+    padding-top: 0.5rem;
+    display: flex;
+    justify-content: center;
     align-content: center;
 }
 /* Class Selectors */
 .box {
-    margin: 1rem;
+    margin-top: 1rem;
     border: 1px solid rgba(70, 131, 180, 0.2);
     padding: 1rem;
+    padding-left: 1.5rem;
     background-color: #eee;
     color: #333333;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
 }
