--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -25,15 +25,30 @@ p {
     padding: 2%;
 }
 
+header {
+    display: grid;
+    grid-template-columns: 1fr 1.5fr;
+    justify-items: center;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+header img {
+    justify-self: center;
+}
+
 header nav {
-    font-size: 1.2rem;
     display: flex;
+    font-size: 1.2rem;
+    justify-self:flex-start;
 }
 
 header nav a {
     display: block;
     text-decoration: none;
     padding: 0.3rem;
+    padding-right: 3rem;
+    padding-left: 3rem;
 }
 
 header nav a:hover {
@@ -44,7 +59,7 @@ article {
     background: var(--accent1-color);
     position: absolute;
     left: 20%;
-    bottom: 27%;
+    bottom: 35%;
     width: 60%;
     opacity: 0.7;
 }
@@ -53,23 +68,30 @@ section p {
     padding: 0px;
 }
 
-footer p, nav {
-    padding: 0%;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
+.history {
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr auto 1fr;
+    justify-items: center;
+    align-items: center;
+}
+
+.history h2 {
+    grid-area: 1 / 1 / 2 / 4;
+    margin: 1rem;
+}
+
+.history img {
+    width: 25rem;
+    grid-area: 2 / 2 / 3 / 3;
+    align-self: center;
+}
+
+.history p {
+    margin: 2rem;
 }
 
 /* Class selectors */
-
-.hero h1 {
-    position: absolute;
-	bottom: 50%;
-    width: 88%;
-	background: var(--secondary-color);
-	padding: 0.65rem;
-    text-align: center;
-    opacity: 0.85;
-}
 
 .hero img {
     display: block;
@@ -85,16 +107,64 @@ footer p, nav {
     bottom: 100%;
 }
 
+.hero h1 {
+    position: absolute;
+	bottom: 55%;
+    width: 88%;
+	background: var(--secondary-color);
+	padding: 0.65rem;
+    text-align: center;
+    opacity: 0.85;
+}
+
 .hero article p {
     padding: 0.7rem;
 }
 
-.gallery p {
-    margin: 0px;
+.gallery {
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: repeat(5, auto);
+    justify-items: center;
+}
+
+.gallery h2 {
+    grid-area: 1 / 1 / 2 / 6;
+}
+
+.gallery figure {
+    margin: 0.5rem;
+    border: thin var(--primary-color) solid;
+    padding: 5px;
+}
+
+.gallery figcaption {
+    background-color: var(--accent1-color);
+    padding: 0.2rem;
+    text-align: center;
+}
+
+.gallery img {
+    height: 8rem;
+}
+
+footer {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    align-items: center;
+    padding: 0%;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    justify-items: center;
+}
+
+footer p {
+    grid-column: 2 / 3;
 }
 
 .sociallinks a {
     width: 3rem;
     margin: 0.1rem;
+    grid-column: 3 / 4;
     display: inline-block;
 }
