--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@600&display=swap');
+
 :root {
     --primary-color: #023047;
     --secondary-color: #219EBC;
@@ -16,7 +17,12 @@ body {
     padding-right: 5%;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: var(--heading-font);
     color: var(--primary-color);
 }
@@ -40,7 +46,7 @@ header img {
 header nav {
     display: flex;
     font-size: 1.2rem;
-    justify-self:flex-start;
+    justify-self: flex-start;
 }
 
 header nav a {
@@ -94,16 +100,16 @@ footer p {
 .hero article img {
     padding: 1rem;
     width: 10rem;
-    float:right;
+    float: right;
     bottom: 100%;
 }
 
 .hero h1 {
     position: absolute;
-	bottom: 55%;
+    bottom: 55%;
     width: 88%;
-	background: var(--secondary-color);
-	padding: 0.65rem;
+    background: var(--secondary-color);
+    padding: 0.65rem;
     text-align: center;
     opacity: 0.85;
 }
@@ -167,4 +173,128 @@ footer p {
     margin: 0.1rem;
     grid-column: 3 / 4;
     display: inline-block;
+}
+
+.profiles {
+    display: grid;
+    grid-template-rows: 1fr 1fr auto;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    margin-bottom: 10rem;
+}
+
+.profiles h1 {
+    grid-area: 1 / 1 / 2 / 4;
+    font-size: 3rem;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.profiles p {
+    grid-area: 2 / 1 / 3 / 4;
+    margin-top: 1.2rem;
+    margin-bottom: 1.2rem;
+    align-self: center;
+    font-size: 1.4rem;
+}
+
+.profiles figure {
+    margin: 0.5rem;
+    border: thin var(--primary-color) solid;
+    padding: 5px;
+}
+
+.profiles figcaption {
+    background-color: var(--accent1-color);
+    padding: 0.2rem;
+    text-align: center;
+}
+
+.profiles img {
+    height: 15rem;
+}
+
+.information {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    padding-left: 13rem;
+    padding-right: 7rem;
+    margin-bottom: 5rem;
+}
+
+.information table {
+    grid-area: 1 / 1 / 2 / 2;
+    width: 22rem;
+}
+
+.information thead {
+    font-size: 1.5rem;
+    background-color: rgba(255, 255, 255, 0);
+}
+
+.information img {
+    width: 4rem;
+
+}
+
+.information iframe {
+    grid-area: 1 / 2 / 2 / 3;
+    width: 33rem;
+    max-width: 39rem;
+    justify-self: left;
+}
+
+form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    justify-items: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+form h2 {
+    grid-area: 1 / 1 / 2 / 3;
+}
+
+form p {
+    grid-area: 2 / 1 / 3 / 3;
+}
+
+.name {
+    grid-area: 3 / 1 / 4 / 2;
+    padding-left: 12rem;
+}
+
+.email {
+    grid-area: 3 / 2 / 4 / 3;
+    padding-right: 12rem;
+}
+
+.radio {
+    grid-area: 4 / 1 / 5 / 3;
+}
+
+.message {
+    grid-area: 5 / 1 / 6 / 6;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+.check {
+    grid-area: 6 / 1 / 7 / 6;
+}
+
+button {
+    grid-area: 7 / 1 / 8 / 6;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    border: none;
+    background-color: var(--secondary-color);
 }
