--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -61,7 +61,7 @@ header nav a:hover {
     color: var(--accent2-color);
 }
 
-article {
+.heading_about {
     background: var(--accent1-color);
     position: absolute;
     left: 20%;
@@ -97,7 +97,7 @@ footer p {
     height: auto;
 }
 
-.hero article img {
+.heading_about img {
     padding: 1rem;
     width: 10rem;
     float: right;
@@ -114,7 +114,7 @@ footer p {
     opacity: 0.85;
 }
 
-.hero article p {
+.heading_about p {
     padding: 0.7rem;
 }
 
@@ -236,7 +236,6 @@ footer p {
 
 .information img {
     width: 4rem;
-
 }
 
 .information iframe {
@@ -244,7 +243,7 @@ footer p {
     width: 33rem;
     max-width: 39rem;
     justify-self: left;
-    border:0; 
+    border: 0;
 }
 
 form {
@@ -298,4 +297,106 @@ button {
     border-radius: 0.5rem;
     border: none;
     background-color: var(--secondary-color);
+}
+
+.trip_call {
+    display: grid;
+    grid-template-rows: 1fr 1fr auto;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    margin-bottom: 5rem;
+    margin-top: 5rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    background-color: var(--accent1-color);
+    opacity: 0.77;
+}
+
+.trip_call h1 {
+    grid-area: 1 / 1 / 2 / 4;
+    font-size: 3.5rem;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.trip_call p {
+    grid-area: 2 / 1 / 3 / 4;
+    margin-top: 1.2rem;
+    margin-bottom: 1.2rem;
+    align-self: center;
+    font-size: 1.4rem;
+}
+
+.trip_call a {
+    grid-area: 3 / 1 / 4 / 4;
+    font-size: 3.5rem;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.pre_places {
+    display: grid;
+    justify-items: center;
+}
+
+.places {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 5rem;
+}
+
+.slide_gallery {
+    display: grid;
+    align-content: space-between;
+
+}
+
+.slider_cover {
+    margin: 0.5rem;
+    border: thin var(--primary-color) solid;
+    padding: 5px;
+    /* margin-bottom: 3.5rem; */
+}
+
+.slider_cover figcaption {
+    background-color: var(--accent1-color);
+    padding: 0.2rem;
+    text-align: center;
+}
+
+.slider {
+    display: flex;
+}
+
+.slider img {
+    width: 0;
+    height: 20rem;
+    flex-grow: 1;
+    object-fit: cover;
+    opacity: .8;
+    transition: .5s ease;
+}
+
+.slider img:hover {
+    cursor: crosshair;
+    width: 20rem;
+    opacity: 1;
+    filter: contrast(120%);
+}
+
+.trips {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 0;
+    justify-items: center;
+}
+
+.trips_information {
+    width: 60rem;
+    border: 1px solid black;
+}
+
+.trips_information th,
+td {
+    border: 1px solid black;
 }
