On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   wwr/styles/rafting.css

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -389,6 +389,7 @@ button {
     grid-template-columns: 1fr;
     padding: 0;
     justify-items: center;
+    margin-bottom: 3rem;
 }
 
 .trips_information {
